--- a/index.Rmd
+++ b/index.Rmd
@@ -25,7 +25,7 @@ github-repo:  'm-clark/'
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = T, message=F, warning=F, error=F, comment=NA, R.options=list(width=220),   # code 
+knitr::opts_chunk$set(echo = T, eval=F, message=F, warning=F, error=F, comment=NA, R.options=list(width=220),   # code 
                       dev.args=list(bg = 'transparent'), dev='svglite',                                 # viz
                       fig.align='center', out.width='75%', fig.asp=.75,                 
                       cache.rebuild=F, cache=T)                                                         # cache
