--- a/index.Rmd
+++ b/index.Rmd
@@ -23,13 +23,12 @@ favicon: 'img/R.ico'
 github-repo:  'm-clark/'
 ---
 
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = T, eval=F, message=F, warning=F, error=F, comment=NA, R.options=list(width=220),   # code 
-                      dev.args=list(bg = 'transparent'), dev='svglite',                                 # viz
-                      fig.align='center', out.width='75%', fig.asp=.75,                 
-                      cache.rebuild=F, cache=T)                                                         # cache
+```{r chunk_setup, include=FALSE, eval=TRUE}
+knitr::opts_chunk$set(echo = T, message=F, warning=F, comment=NA, autodep=F, 
+                      eval=F, cache.rebuild=F, cache=T, R.options=list(width=120), 
+                      fig.width=8, fig.align = 'center', dev.args=list(bg = 'transparent'), dev='svglite')
 ```
+
 
 
 ```{r load_common_packages, echo=FALSE, cache=FALSE, eval=TRUE, cache=FALSE}
@@ -38,14 +37,13 @@ library(tidyverse); library(ggplot2movies); library(tibble); library(tidyext)
 
 # 
 
-<!-- ##### {-} -->
 
 
 
-```{r rimg, fig.align='center',  out.width=200, echo=FALSE, cache=FALSE}
+```{r rimg, fig.align='center',  out.width=200, echo=FALSE, cache=FALSE, eval=TRUE}
 knitr::include_graphics('img/198R.png', dpi = NA)
 ```
 
-```{r ccimg, fig.align='center', out.width=0, fig.show='hide', echo=FALSE}
+```{r ccimg, fig.align='center', out.width=0, fig.show='hide', echo=FALSE, eval=TRUE}
 knitr::include_graphics('img/mc_logo.png', dpi = NA)
 ```
