--- a/brms.Rmd
+++ b/brms.Rmd
@@ -10,10 +10,29 @@
 
 ## brms: Mixed Model
 
+```{r brms_mixed}
+sleepstudy_brms <- brm(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy)
+summary(sleepstudy_brms)
+```
+
+```{r brms_mixed_show, eval=TRUE, echo=FALSE}
+summary(sleepstudy_brms)
+```
+
+
+
 ## brms: Mixed Model Extensions
 
 - Correlated residuals, heterogeneous var, heterogeneous var comp
-- GAM
+
+```{r}
+model <- brm(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy, correlation = cor_ar(~Days))
+model <- brm(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy, correlation = cor_ar(~Days))
+model <- brm(Reaction ~ s(Days) + (1 + Days|Subject), data = sleepstudy)
+
+```
+
+- GAM (gp)
 - ZIP
 - Multivariate
 - Missing data
