--- a/brms.Rmd
+++ b/brms.Rmd
@@ -6,7 +6,24 @@
 - Installed as any other R package
 
 
+# Comparison to rstanarm
+
+
+<img src="img/brms_vs_rstanarm.png" style="display:block; margin: 0 auto;" width=75%>
+
 # Models
+
+<img src="img/brms_model_fitting.png" style="display:block; margin: 0 auto;" width=50%>
+
+
+## Models in brms
+
+The modeling syntax with brms mimics base R and some of the more popular packages:
+
+- base R
+- lme4
+- mgcv
+- survival
 
 ## brms: Mixed Model
 
@@ -23,16 +40,38 @@ summary(sleepstudy_brms)
 
 ## brms: Mixed Model Extensions
 
-- Correlated residuals, heterogeneous var, heterogeneous var comp
+- additional distributions: ordinal, zero-inflated, beta and many more
+- Correlated residuals, Additive mixed models, non-linear with known form, heterogenous variance components, correlated random effects across multivariate outcomes, and more
 
 ```{r}
+# auto regressive residual structure
 model <- brm(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy, correlation = cor_ar(~Days))
-model <- brm(Reaction ~ Days + (1 + Days|Subject), data = sleepstudy, correlation = cor_ar(~Days))
+
+# smooth term for Days
 model <- brm(Reaction ~ s(Days) + (1 + Days|Subject), data = sleepstudy)
+
+# multivarate outcome q is an arbitrarily named identifier connecting random effects.
+f1 = bf(DV_1 ~ x + 1|q|group)
+f2 = bf(DV_2 ~ x + 1|q|group)
+f = f1 + f2
+
+model <- brm(f, data = mydata)
+
+
+# non-linear model with known form
+nlform <- bf(cum ~ ult * (1 - exp(-(dev / theta)^omega)),
+             ult ~ 1 + (1 | AY), omega ~ 1, theta ~ 1, nl = TRUE)
 
 ```
 
+
+## brms: Mo' models, mo' models, mo' models!
+
+
 - GAM (gp)
+- Distributional response (e.g. model the variance as well as the mean)
+- Gaussian Processes
 - ZIP
 - Multivariate
 - Missing data
+- Measurement error
