--- a/index.Rmd
+++ b/index.Rmd
@@ -32,7 +32,8 @@ knitr::opts_chunk$set(echo = T, message=F, warning=F, comment=NA, autodep=F,
 
 
 ```{r load_common_packages, echo=FALSE, cache=FALSE, eval=TRUE, cache=FALSE}
-library(tidyverse); library(ggplot2movies); library(tibble); library(tidyext); library(broom); library(kableExtra)
+library(tidyverse); library(ggplot2movies); library(tibble); library(tidyext); 
+library(broom); library(kableExtra); library(rstanarm); library(brms)
 
 kable_df <- function(..., digits=3) {
   kable(..., digits=digits) %>% 
