--- a/stan.Rmd
+++ b/stan.Rmd
@@ -1,4 +1,8 @@
-# Stan and the Stan ecosystem <img src="img/bayes_doc/stan_logo.png" style="vertical-align:middle; display:inline;" width=5%>
+# Stan and the Stan ecosystem 
+
+<!-- <img src="img/bayes_doc/stan_logo.png" style="vertical-align:middle; display:inline;" width=5%> -->
+
+
 
 ## Stan 
 
@@ -52,9 +56,10 @@ model {                     // Model block
 
 ## rstan
 
-<img src="img/bayes_doc/r_stan.png" style="display:block; margin: 0 auto;" width=25%>
+<img src="img/bayes_doc/r_stan.png" style="display:block; margin: 0 auto;" width=50%>
+<br>
 
-Allows one to use Stan within R.
+Allows one to use Stan within R
 
 Model can be: 
 
@@ -63,23 +68,23 @@ Model can be:
 
 RStudio support for Stan (e.g. syntax highlighting)
 
-rstan runs the model, and provides a lot of other tools to assess.
+<span class="pack">rstan</span> runs the model, and provides a lot of other tools to assess.
 
 ```{r rstan_example}
 results = stan(model_code = my_model, data = my_data_list)
 ```
 
 
-We will not cover this package.
+We will not cover this package
 
 
 ## rstanarm
 
-Developed by Stan team.
+Developed by Stan team
 
-Good for basic to intermediate, and even somewhat complex models.
+Good for basic to intermediate, and even somewhat complex models
 
-Precompiled stan code. 
+Precompiled stan code
 
 - Standard models run very quickly
 - Without compilation will always be faster than brms for identical models
